--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,12 +42,10 @@
                                     </div>
                                     <form class="user" action="/loginProc" method="post">
                                         <div class="form-group">
-                                            <input type="email"
+                                            <input type="text"
                                                    class="form-control form-control-user"
-                                                   id="exampleInputEmail"
                                                    name="username"
-                                                   aria-describedby="emailHelp"
-                                                   placeholder="Enter Email Address...">
+                                                   placeholder="Enter UserName">
                                         </div>
                                         <div class="form-group">
                                             <input type="password"
