--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,6 +116,13 @@
                     <span>Tables</span></a>
             </li>
 
+            <!-- System Setting -->
+            <li class="nav-item">
+                <a class="nav-link" href="tables.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Systemtettings</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
