--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -118,9 +118,9 @@
 
             <!-- System Setting -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="setting.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Systemtettings</span></a>
+                    <span>Setting</span></a>
             </li>
 
             <!-- Divider -->
