--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -107,7 +107,7 @@
 
         <!-- System Setting -->
         <li class="nav-item">
-            <a class="nav-link" href="setting.html">
+            <a class="nav-link" href="/menu/setting">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Setting</span></a>
         </li>
